Popup overlap fix

--- a/wp-content/themes/ajency-portfolio/scss/_product.scss
+++ b/wp-content/themes/ajency-portfolio/scss/_product.scss
@@ -248,6 +248,10 @@
     }
 }
 
+.zindex{
+    z-index: 99;
+}
+
 // .trigger1{
 //     z-index: 99;
 // }
